# Time-Series

./: README.md  _prediction.ipynb  capital_testing.ipynb  centers.npy  final_graphics.ipynb  generator.ipynb  generator_lib.py  indexes.ipynb  indexes_lib.py  lorentz.ipynb  pos_val_hor_100.npy  prediction_hor_100.npy  pyproject.toml  reqs.txt  wishart.ipynb  wishart_lib.py
app/: __init__.py
app/lorenz_prediction/: __init__.py  _prediction.ipynb
app/wishart/: __init__.py  motifs.py  wishart_lib.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
generator/: generator.ipynb  generator_lib.py
indexes/: indexes.ipynb  indexes_lib.py
iris/: iris_prediction.ipynb
lorentz_research/: README.MD  experiment_results
lorentz_research/analysis/: centers_checker.py  lorentz_visuals.ipynb
lorentz_research/metrics_calc/: graphs_builder.ipynb  metrics_visualiser.py
lorentz_research/movers/: centers_mover.sh  metrics_mover.sh
lorentz_research/nnpp_for_tenk/: NNPP_absolutely_similar0.npy  (+12 more)
lorenz prediction/: __init__.py  _prediction.ipynb
motifs/: motifs.py
pepredict/: README.md  example.py  pepredict.py
self-healing/: _prediction.ipynb  draw_comparison.ipynb  draw_daemon_comparison.ipynb
superscript/: prediction_script copy.py  prediction_script.py  requirements.txt  superscript.py
white_noise_research/: research.ipynb  research_big.ipynb  research_tryhard.ipynb
wishart/: wishart.ipynb  wishart_lib.py  wishart_lib_stepan.py
(+12779 files in other folders)
